--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #1b1b1b;
+}
+
+.custom-scroll {
+  scrollbar-color: #3f3f3f transparent;
+  scrollbar-width: thin;
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .hover-opacity {
+    @apply duration-300 ease-in-out sm:hover:opacity-50;
   }
 }
